# mcp-evidencebase

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.images.yml  docker-compose.override.yml  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/nginx/: default.conf
docker/api/: Dockerfile
docker/app/: Dockerfile
docker/celery/: Dockerfile
docker/docs/: Dockerfile
docker/proxy/: 04-configure-app-basic-auth.envsh  Dockerfile
docs/: build_docs.sh  redis-qdrant-decoupling-remediation-backlog.md  refactor-optimisation-backlog.md
docs/scripts/: render_test_summary.py
docs/site/: .buildinfo  genindex.html  gpt_actions.html  index.html  objects.inv  py-modindex.html  readme.html  reference.html  search.html  searchindex.js  tests.html  vignette_cli.html
docs/site/.doctrees/: environment.pickle  gpt_actions.doctree  index.doctree  readme.doctree  reference.doctree  tests.doctree  vignette_cli.doctree
docs/site/_sources/: gpt_actions.md.txt  index.rst.txt  readme.md.txt  tests.rst.txt  vignette_cli.md.txt
docs/site/_static/tests/: final_report.json  index.html  plus_metadata.json  report.html  summary.rst
docs/source/: conf.py  gpt_actions.md  index.rst  readme.md  reference.rst  tests.rst  vignette_cli.md
docs/source/_static/tests/: final_report.json  plus_metadata.json  report.html  summary.rst
frontend/: Dockerfile  index.css  index.html  index.js  package-lock.json  package.json  playwright.config.js  resolver.css  resolver.html  resolver.js
frontend/js/: api-client.mjs  collection-cache.mjs  collection-loader.mjs  document-debug-loader.mjs  metadata-editor.mjs  progress-ui.mjs  search-ui.mjs  state-store.mjs  table-ui.mjs
frontend/tests/e2e/: ui.spec.js
frontend/tests/unit/: api-client.test.mjs  collection-loader.test.mjs  document-debug-loader.test.mjs  metadata-editor.test.mjs  progress-ui.test.mjs  search-ui.test.mjs  state-store.test.mjs  table-ui.test.mjs
report_output/: final_report.json  plus_metadata.json  report.html
scripts/: run_codex_mcp.sh  run_diagnostic_checklist.sh  run_runtime_perf_harness.sh
src/mcp_evidencebase/: __init__.py  __main__.py  api.py  bucket_service.py  celery_app.py  citation_schema.py  cli.py  core.py  ingestion.py  minio_settings.py  pdf_split.py  perf.py  runtime_diagnostics.py  storage_layout.py  tasks.py
src/mcp_evidencebase/api_modules/: __init__.py  deps.py  errors.py  models.py  services.py  task_dispatch.py
src/mcp_evidencebase/api_modules/routers/: buckets.py  collections.py  gpt.py
src/mcp_evidencebase/ingestion_modules/: __init__.py  chunking.py  crossref.py  metadata.py  qdrant.py  repository.py  service.py  wiring.py
src/mcp_evidencebase/mcp_server/: __init__.py  __main__.py  serialization.py  server.py  tools.py
tests/: build_test_reports.sh  conftest.py  test_api.py  test_celery_app.py  test_chunking.py  test_cli.py  test_core.py  test_ingestion.py  test_live_datastores_integration.py  test_mcp_server.py  test_minio_settings.py  test_proxy_config.py  test_runtime_diagnostics.py  test_tasks.py
