[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-evidencebase"
version = "0.1.0"
description = "Manage evidence base metadata, semantic search, and GPT summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "celery[redis]>=5.4.0",
  "fastembed>=0.5.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "minio>=7.2.10",
  "pypdf>=5.1.0",
  "qdrant-client>=1.12.1",
  "redis>=5.2.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "flower>=2.0.1",
  "mypy>=1.13.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-html-plus",
  "ruff>=0.8.4",
  "Sphinx>=8.1.3",
  "myst-parser>=4.0.1",
  "twine>=6.0.1",
]
docs = [
  "Sphinx>=8.1.3",
  "httpx>=0.27.0",
  "myst-parser>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-html-plus",
]

[project.scripts]
mcp-evidencebase = "mcp_evidencebase.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_evidencebase"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --cov=mcp_evidencebase --cov-report=term-missing --cov-report=xml:docs/source/_static/tests/coverage.xml --html-output=docs/source/_static/tests --should-open-report=never"
testpaths = ["tests"]
markers = [
  "area_cli: CLI and package-level behavior tests",
  "area_core: core bucket operation tests",
  "area_settings: settings parsing and defaults tests",
  "area_api: HTTP API endpoint behavior tests",
  "area_ingestion: ingestion, metadata, and indexing tests",
  "integration_live: opt-in live MinIO/Redis/Qdrant integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["mcp_evidencebase"]
